--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "@jaames/flipnote-video": "./cli.js",
+    "flipnote-video": "./cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cli-progress": "3.0.0",
     "flipnote.js": "^3.1.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "tmp": "^0.1.0"
+    "fluent-ffmpeg": "2.1.2",
+    "meow": "5.0.0",
+    "tmp": "0.1.0",
+    "yargs": "13.3.0"
   }
 }
